--- a/login.html
+++ b/login.html
@@ -9,17 +9,19 @@
   <body>
     <div class="login-container">
       <h2>Login</h2>
-      <form action="/login" method="POST">
-        <input type="text" name="username" placeholder="Username" required />
+      <form id="loginForm">
+        <input type="text" name="username" placeholder="Username" id="username" required />
         <input
           type="password"
           name="password"
           placeholder="Password"
           required
+          id="password"
         />
-        <button type="submit">Login</button>
+        <button type="submit" id="buttonLogin">Login</button>
       </form>
       <p>Don't have an account? <a href="/register">Register here</a></p>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
